--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "vuex": "^2.3.0"
   },
   "devDependencies": {
+    "axios": "^0.16.1",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.0.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "lodash": "^4.17.4",
     "vue-loader": "^11.1.4",
     "vue-template-compiler": "^2.2.1",
     "webpack": "^2.2.0",
